August 22, 2023
	Added Vector2 structure that holds floating point numbers
	Created functions for getting the center positions in between two vector2's
	Replaced previous Math.h usage of fabs() with custom function for getting absolute values
	Created a sign flipping function
	Initial comments
	Listed out code standards and conventions

August 23, 2023
	Updated 4coder project bindings to support build.bat hotkey
	Implemented a macro to toggle between demo mode and packaging mode
	Added new get_raised_power_value_float() function
	Added new get_modulus_value_float() function that is currently broken and needs work
	Added functions for rounding, as well as force rounding up or down. Needs modulus function to work.

August 30, 2023
	Created todo.bat file that will print out the file name, line number, and contents of all //TODO: comments
	Re-implementation of the limits.h header file contents for integer values. Floating point numbers coming later.
	Added Vector3 implementations of the previous Vector2 functions

August 31, 2023
	Absolute value function for ints
	Functions that return the larger or smaller value of floats / ints
	Functions that returns the value difference between floats / ints