@@ -3,10 +3,98 @@
 #include "quark.h"
 #include <stdio.h> 
 
+void run_demo()
+{
+    /*
+
+    Bool bool_test = {false};
+    printf("Boolean Initialized To False: %d\n", test);
+    test.state = true;
+    printf("Boolean Change To True: %d\n", test);
+    
+    printf("Max Char Value%c\n", char get_max_char_value());
+    printf("Min Char Value%c\n", char get_min_char_value());
+    printf("Max Unsigned Char Value%cu\n", char get_max_unsigned_char_value());
+    
+    printf("Max Short Value%s\n", char get_max_short_value());
+    printf("Min Short Value%s\n", char get_min_short_value());
+    printf("Max Unsigned Short Value%su\n", char get_max_unsigned_short_value());
+    
+    printf("Max Int Value%d\n", char get_max_int_value());
+    printf("Min Int Value%d\n", char get_min_int_value());
+    printf("Max Unsigned Int Value%du\n", char get_max_unsigned_int_value());
+    
+    printf("Max Long Value%l\n", char get_max_long_value());
+    printf("Min Long Value%l\n", char get_min_long_value());
+    printf("Max Unsigned Long Value%lu\n", char get_max_unsigned_long_value());
+    
+    printf("Max Long Long Value%ll\n", char get_max_long_long_value());
+    printf("Min Long Long Value%ll\n", char get_min_long_long_value());
+    printf("Max Unsigned Long Long Value%llu\n", char get_max_unsigned_long_long_value());
+    
+    Vector2 vec2_test = {1, 2};
+    printf("Vector2 Initialized To 1, 2: %f,%f\n", vec2_test.x, vec2.test.y);
+    Vector3 vec3_test = {1, 2, 3};
+    printf("Vector3 Initialized To 1, 2, 3: %f,%f,%f\n", vec3_test.x, vec3.test.y, vec3_test.z);
+    
+    printf("Vector2 Meeting Point X: %f\n", vector2_get_meeting_point_x(Vector2, Vector2)); 
+    printf("Vector2 Meeting Point Y: %f\n", vector2_get_meeting_point_y(Vector2, Vector2));
+    printf("Vector2 Meeting Point All: %f, %f\n", vector2_get_meeting_point_x(Vector2, Vector2), vector2_get_meeting_point_y(Vector2, Vector2));
+    
+    printf("Vector3 Meeting Point X: %f\n", vector3_get_meeting_point_x(Vector3, Vector3, Vector3)); 
+    printf("Vector3 Meeting Point Y: %f\n", vector3_get_meeting_point_y(Vector3, Vector3, Vector3));
+    printf("Vector3 Meeting Point Z: %f\n", vector3_get_meeting_point_z(Vector3, Vector3, Vector3));
+    printf("Vector3 Meeting Point All: %f, %f, %f\n", vector3_get_meeting_point_x(Vector3, Vector3, Vector3), 
+           vector3_get_meeting_point_y(Vector3, Vector3, Vector3), 
+           vector3_get_meeting_point_z(Vector3, Vector3, Vector3));
+    
+    printf("Absolute Value Of -15.2: %f\n", get_absolute_value_float(-15.2f));
+    printf("Absolute Value Of -15: %d\n", get_absolute_value_int(-15));
+    
+    printf("4.2 Raied To 3rd Power: %f\n", get_raised_power_value_float(4.2f, 3));
+    printf("5 Raied To 6th Power: %d\n", get_raised_power_value_int(5, 6));
+    
+    printf("5.2 mod 2: %f\n", get_modulus_value_float(5.2f, 2));
+    printf("5 mod 3: %d\n", get_modulus_value_int(5, 3));
+    
+    printf("-5.2 Flipped: %f\n", get_flipped_sign_float(-5.2f));
+    printf("5 Flipped: %d\n", get_flipped_sign_int(5));
+    
+    float sign_test_float = 10.2f;
+    int sign_test_int = -3;
+    
+    printf("Float Initialized To 10.2: %d\n", sign_test_float);
+    printf("Int Initialized To -3: %d\n", sign_test_int);
+    
+    flip_sign_float(&sign_test_float);
+    flip_sign_int(&sign_test_int);
+    
+    printf("Float Changed To -10.2: %d\n", sign_test_float);
+    printf("Int Changed To 3: %d\n", sign_test_int);
+    
+    float round_test_float = 10.2f;
+    printf("Float Initialized To 10.2: %f\n", round_test_float);
+    round_float(&round_test_float); 
+    printf("Float Changed To -10.0: %f\n", round_test_float);
+    
+    round_test_float = 10.2f;
+    printf("Float Initialized To 10.2: %f\n", round_test_float);
+    round_float_up(&round_test_float); 
+    printf("Float Changed To -11.0: %f\n", round_test_float);
+    
+    round_test_float = 10.2f;
+    printf("Float Initialized To 10.2: %f\n", round_test_float);
+    round_float_down(&round_test_float); 
+    printf("Float Changed To -10.0: %f\n", round_test_float);
+    
+*/
+    
+    scanf(".");
+}
+
 int main()
 {
-    printf("%d", get_absolute_value_int();
-           scanf(".");
-           return 0;
+    run_demo();
+    return 0;
 }
 
